samples/_failures_safe/1761040082_899e6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be6f6645.c: In function ‘main’:
./samples/SAFE/__tmp_be6f6645.c:154:9: error: expected declaration or statement at end of input
  154 |         printf("No input provided\n");
      |         ^~~~~~
./samples/SAFE/__tmp_be6f6645.c:154:9: error: expected declaration or statement at end of input
